--- a/bower.json
+++ b/bower.json
@@ -34,8 +34,9 @@
      "jquery": ">=1.9.1"
   },
   "devDependencies": {
+    "jquery-ui-1.9.2": "jquery-ui#1.9.2",
+    "jquery-ui-1.12.1": "jquery-ui#1.12.1",
     "jquery": "1.9.1",
-    "jquery-ui": "1.9.2",
     "qunit": "1.19.0",
     "bootstrap": "~3.3.6",
     "jquery.maskedinput": "~1.4.1"
